--- a/package.json
+++ b/package.json
@@ -7,11 +7,32 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
+    "lint:prettier": "prettier --check .",
+    "lint": "bun lint:js && bun lint:prettier",
+    "lintfix": "prettier --write --list-different . && bun lint:js --fix"
   },
   "devDependencies": {
+    "@nuxt/eslint-config": "^0.2.0",
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "eslint-import-resolver-typescript-bun": "^0.0.72",
+    "eslint-plugin-import": "^2.29.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "nuxt": "^3.9.1",
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.3",
     "vue": "^3.4.10",
+    "tailwindcss": "3.4.1",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@vueuse/components": "^10.7.2",
+    "@vueuse/core": "^10.7.2",
+    "uuidv4": "^6.2.13"
   }
 }
